# solark_monitor

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  solark_modbus.py  solark_monitor.py  solark_monitor_database.sql
dashboard/: grafana_dashboard.json
database/: solark_monitor_database.sql
solark_monitor/: config.py  solark_modbus.py  solark_modbus_example.py  solark_monitor.py
tests/: test_class_config.py
